오타수정, PHP코드 오류 체크 추가 버젼관리 파일 변경

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@
 .softforum/
 .ssh/
 .subversion/
-.vim/.netrwhist
 .viminfo
 Applications/
 Desktop/
@@ -26,3 +25,12 @@ Movies/
 Music/
 Pictures/
 Public/
+
+.composer/
+.mysql_history
+bak/
+docs
+html
+public_html/
+scripts/
+src/
