컬러코드 오류 수정, 기본 디렉토리 예외처리 추가

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 .config/
 .cups/
 .deliverycenter.installs
+.DS_Store
+.dropbox/
 .eclipse/
 .filezilla/
 .gitconfig
@@ -15,9 +17,12 @@
 .softforum/
 .ssh/
 .subversion/
+.vagrant.d/
 .viminfo
 Applications/
+Cloud/
 Desktop/
+Dev/
 Documents/
 Downloads/
 Library/
@@ -25,6 +30,7 @@ Movies/
 Music/
 Pictures/
 Public/
+VirtualBox VMs/
 
 .composer/
 .mysql_history
