--- a/source/nginx/conf.d/default.conf
+++ b/source/nginx/conf.d/default.conf
@@ -12,6 +12,14 @@ server {
     include /etc/nginx/default.d/*.conf;
 
     location / {
+        index  index.html index.htm index.php;
+    }
+
+    location ~ \.php$ {
+        fastcgi_pass   unix:/var/run/php5-fpm.sock;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        include        fastcgi_params;
     }
 
     error_page 404 /404.html;
