--- a/source/php/php-fpm.conf
+++ b/source/php/php-fpm.conf
@@ -146,8 +146,8 @@ process_control_timeout = 20s
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = daemon
-group = daemon
+user = nginx
+group = nginx
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -161,7 +161,7 @@ group = daemon
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = /usr/local/etc/php-fpm.sock
+listen = /var/run/php-fpm.sock
 
 ; Set listen(2) backlog.
 ; Default Value: 65535 (-1 on FreeBSD and OpenBSD)
@@ -172,8 +172,8 @@ listen = /usr/local/etc/php-fpm.sock
 ; BSD-derived systems allow connections regardless of permissions. 
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-listen.owner = daemon
-listen.group = daemon
+listen.owner = nginx
+listen.group = nginx
 ;listen.mode = 0660
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
