--- a/source/nginx/conf.d/default.conf
+++ b/source/nginx/conf.d/default.conf
@@ -6,7 +6,7 @@ server {
     listen       80 default_server;
     listen       [::]:80 default_server;
     server_name  _;
-    root         /home/httpd;
+    root         /home/httpd/public;
 
     # Load configuration files for the default server block.
     include /etc/nginx/default.d/*.conf;
