fix rewrite rule

--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,7 +1,3 @@
-#
-# The default server
-#
-
 server {
     listen       80 default_server;
     listen       [::]:80 default_server;
@@ -13,13 +9,34 @@ server {
 
     location / {
         index  index.html index.htm index.php;
+
+        if (-f $request_filename) {
+            break;
+        }
+
+        if (!-e $request_filename) {
+            rewrite ^/(.*)$ /index.php/$1 last;
+        }
     }
 
-    location ~ \.php$ {
+    location ~ \.php($|/) {
+
         fastcgi_pass   unix:/var/run/php-fpm.sock;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
+
+    }
+
+    location ~* \.(css|js|swf|jpg|jpeg|gif|css|png|ico)?$ {
+        access_log  /var/log/nginx/access_css.log  main;
+        break;
+    }
+
+    location = /favicon.ico {
+        access_log off;
+        expires 30d;
+        break;
     }
 
     error_page 404 /404.html;
